// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render 1`] = `
<Checkbox__StyledContainer>
  <Checkbox__StyledCheckbox
    checked={false}
    onClick={[MockFunction]}
  >
    <Checkbox__CheckIcon
      checked={false}
      name="check"
    />
    <Checkbox__StyledInput />
  </Checkbox__StyledCheckbox>
  <Checkbox__Label>
    foo
  </Checkbox__Label>
</Checkbox__StyledContainer>
`;

exports[`Checkbox should render when [props.checked===true] 1`] = `
<Checkbox__StyledContainer>
  <Checkbox__StyledCheckbox
    checked={true}
    onClick={[MockFunction]}
  >
    <Checkbox__CheckIcon
      checked={true}
      name="check"
    />
    <Checkbox__StyledInput />
  </Checkbox__StyledCheckbox>
  <Checkbox__Label>
    foo
  </Checkbox__Label>
</Checkbox__StyledContainer>
`;

exports[`Checkbox should render when [props.label===''] 1`] = `
<Checkbox__StyledContainer>
  <Checkbox__StyledCheckbox
    checked={false}
    onClick={[MockFunction]}
  >
    <Checkbox__CheckIcon
      checked={false}
      name="check"
    />
    <Checkbox__StyledInput />
  </Checkbox__StyledCheckbox>
</Checkbox__StyledContainer>
`;
